--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mail e Dati</title>
         <!-- BOOTSTRAP -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
+
     <body>
-        <div id="output-1"></div>
-        <div id="output-2"></div>
-        <br>
-        <br>
-        <div id="vittoria"></div>
-        <br>
-        <br>
-        <a href="#" class="btn btn-primary" id="button-1">
-            RANDOM
-        </a>
+        <main>
+            <div class="container">
+                <div class="row d-flex justify-content-around">
+                    <div class="col-4">
+                        <div id="output-1"></div>
+                        <div id="output-2"></div>
+                        <br>
+                        <br>
+                        <div id="vittoria"></div>
+                        <br>
+                        <br>
+                        <a href="#" class="btn btn-primary" id="button-1">
+                            RANDOM
+                        </a>
+                    </div>
+                    <div class="col-4">
 
-
-
+                    </div>
+                </div>
+            </div>
+        </main>
         <script src="./dati.js"></script>
     </body>
 </html>
